--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="lib" path="C:/Users/ENVY/Downloads/bcprov-jdk15on-1.60.jar"/>
 	<classpathentry kind="lib" path="C:/Users/ENVY/Downloads/leveldbjni-all-1.8.jar"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ENVY/Downloads/bctls-jdk15on-162.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ENVY/Downloads/bcpkix-jdk15on-162.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
